--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Credit 
-buatan : muhamad Badru wasih
-contact: t.me/mhmdbadru
-tiktok : mhmdbadru23 
+buatan : febrian
+contact: t.me/dev_michan
+tiktok : dev_michan
 -->
 
 <!DOCTYPE html>
