--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Credit 
-buatan : febrian
-contact: t.me/dev_michan
-tiktok : dev_michan
+buatan : Muhamad Badru Wasih
+contact: t.me/mhmdbadru
+tiktok : mhmdbadru23 
 -->
 
 <!DOCTYPE html>
